# statellite-autonomy

./: .clang-format  .gitignore  .mcp.template.json  AGENTS.md  README.md  harness_implementation_summary.md  meson.build  meson_options.txt  pyproject.toml
.codex-plugin/: plugin.json
.githooks/: commit-msg
.github/workflows/: ci.yml  pages.yml
architecture/blueprints/decisions/: architecture-freeze-artifact-lifecycle.md
architecture/blueprints/system/: asset-authority-boundary.md  asset-authority-boundary.puml  harness-product-boundary.md  harness-product-boundary.puml
contracts/: README.md  eval_governance.contract.md  harness_product_boundary.contract.md  harness_workflow.contract.md  layer_boundary.contract.md  mission_planning.contract.md  navigation.contract.md  ppp_family.contract.md  prediction.contract.md  rdpod_family.contract.md  state_handoff_navigation_to_prediction.contract.md  time_system.contract.md
docs/: README.md  backlog.md  plugin-installation.md
docs/architecture/: agent-collaboration.md  harness_product_split.md  system_layers.puml
docs/architecture/blueprints/: README.md
docs/governance/: harness_product_split.md
docs/guides/: agent-collaboration.md  harness_product_split.md
docs/memory/short_term/: active_context.md  task_board.md
docs/memory/working/: current_focus.md
docs/toolchain/: benchmark_entrypoints.md  build_entrypoints.md  commit_workflow_scripts.md  dashboard_entrypoints.md  diagram_entrypoints.md  governance_quality_entrypoints.md  overview.md  site_entrypoints.md  test_entrypoints.md  traceability_entrypoints.md
docs/traceability/: README.md  agent_activity_log.md  decision_log.md  known_limitations.md  scope_to_contract.md  scope_to_spec.md  task_archive.md
eval/agent_workflow/: README.md  happy_path_pm_to_eval.json  negative_expert_contract_scope.json  negative_obsidian_gate_block.json
eval/agent_workflow/architecture_expert/: contract_freeze_blueprint_freeze.json
eval/baselines/: time_accuracy_baseline.json  time_performance_baseline.json  time_status_baseline.json
eval/domains/: README.md
eval/domains/pppar/: manifest.json
eval/domains/time/: manifest.json
eval/scenarios/: time_invalid_inputs.json  time_leap_second_boundary_2015.json  time_roundtrip_utc_tt_gpst.json  time_ut1_dependency.json
governance/: README.md  eval_governance.policy.md  harness_product_boundary.policy.md  harness_workflow.policy.md
governance/policies/: eval_governance.policy.md  harness_product_boundary.policy.md  harness_workflow.policy.md
governance/records/: README.md  agent_activity_log.md  decision_log.md  known_limitations.md  scope_to_spec.md  task_archive.md
governance/records/short_term/: active_context.md  task_board.md
governance/records/working/: current_focus.md
harness/: README.md
harness/agents_runtime/: __init__.py  allowlist.py  artifacts.py  curator.py  knowledge.py  registry.py  runtime_adapter.py  sessions.py  tracing.py
harness/config/: agent_registry.json  governance_policy.json  knowledge_registry.json  tool_allowlist.json
harness/eval/: README.md
harness/eval/agent_workflow/: happy_path_pm_to_eval.json  negative_illegal_phase_transition.json
harness/orchestrator/: harness_cli.py  runtime_model.py
harness/runtime/: .gitignore
harness/schemas/: architecture_freeze.schema.json  coding_task.schema.json  contract_request.schema.json  eval_summary.schema.json  execution_report.schema.json  handoff.schema.json  knowledge_context.schema.json  review_feedback.schema.json  task_brief.schema.json  task_state.schema.json  test_task.schema.json
harness/session_policies/: default_policy.md
harness/templates/: architecture_freeze.json  handoff.json  task_brief.md
harness/tests/: test_agents_runtime.py  test_harness_cli.py
plugins/statellite-autonomy-plugin/: README.md
product/: meson.build
product/src/unit/time/: meson.build  orbit_time.cpp
product/tests/: meson.build  test_time.cpp
scripts/: check_quality.py  dashboard_common.py  install_commit_msg_hook.sh  install_local_plugin.sh  meson-cli  nav-toolchain  render_project_dashboard.py  run_uv_mcp.sh  validate_commit_message.py
scripts/tests/: test_governance_quality.py  test_prompt_docs.py
site/: README.md  mkdocs.yml  requirements.txt
site/scripts/: build_site.py  render_plantuml.py
skills/architecture-expert/: SKILL.md
skills/benchmark-evaluator/: SKILL.md
skills/coding-skill/: SKILL.md
skills/coding-style-rules/: SKILL.md
skills/commit-message-policy/: SKILL.md
skills/contract-driven-coding/: SKILL.md
skills/contract-driven-testing/: SKILL.md
skills/mission-planning-designer/: SKILL.md
skills/orbit-reviewer/: SKILL.md
skills/plantuml-architecture-styleguide/: SKILL.md
skills/pppar-expert/: SKILL.md
skills/pppar-expert/agents/: openai.yaml
skills/prediction-designer/: SKILL.md
skills/project-manager/: SKILL.md
skills/rdpod-analyst/: SKILL.md
skills/system-architect/: SKILL.md
skills/testing-skill/: SKILL.md
skills/traceability-manager/: SKILL.md
src/unit/: meson.build
subprojects/: gtest.wrap
subprojects/packagefiles/gtest/: meson.build
tests/: test_time.cpp  time_benchmark.cpp
tools/governance-cli/: governance_cli.py  governance_common.py  governance_dashboard.py  pyproject.toml
tools/meson-cli/: README.md  meson_cli.py  meson_knowledge_ops.py  pyproject.toml
tools/meson-cli/config/: cross-openeuler-aarch64.ini  darwin.ini  docker-cross-aarch64.ini  windows.ini
tools/nav-toolchain-cli/: README.md  pyproject.toml  toolchain_cli.py
tools/nav-toolchain-mcp/: README.md  pyproject.toml  server.py  toolchain_mcp.py
tools/plantuml-cli/: pyproject.toml
tools/plantuml-cli/plantuml_cli/: __init__.py  cli.py
tools/site-cli/: pyproject.toml
tools/site-cli/site_cli/: __init__.py  build_site.py  cli.py
tools/tests/: test_cli_tools.py  test_governance_cli.py  test_site_tooling.py
tools/traceability-cli/: README.md  pyproject.toml  traceability_cli.py
tools/traceability-mcp/: README.md  gen_contract_index.py  gen_trace.py  pyproject.toml  server.py  traceability_cli.py
(+104 files in other folders)
