[project]
name = "statellite-workspace"
version = "0.1.0"
description = "Workspace root for statellite-autonomy-plugin Python tooling"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
]
site = [
  "site-cli",
]
plantuml = [
  "plantuml-cli",
]

[tool.uv]
package = false
default-groups = []

[tool.uv.sources]
site-cli = { workspace = true }
plantuml-cli = { workspace = true }

[tool.uv.workspace]
members = [
  "tools/governance-cli",
  "tools/meson-cli",
  "tools/traceability-cli",
  "tools/site-cli",
  "tools/plantuml-cli",
]
