[project]
name = "governance-cli"
version = "0.1.0"
description = "Governance quality and dashboard CLI for statellite-autonomy-plugin"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
governance-cli = "governance_cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["governance_cli", "governance_common", "governance_dashboard"]
