[project]
name = "plantuml-cli"
version = "0.1.0"
description = "PlantUML rendering and lint helpers for statellite-autonomy-plugin"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
plantuml-cli = "plantuml_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
