[project]
name = "site-cli"
version = "0.1.0"
description = "Static site build CLI for statellite-autonomy-plugin"
requires-python = ">=3.11"
dependencies = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "pymdown-extensions>=10.12,<11",
  "plantuml-cli",
]

[project.scripts]
site-cli = "site_cli.cli:main"

[tool.uv.sources]
plantuml-cli = { workspace = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
